Fixed issue with setting up forge on windows (and linux since I screwed it up in 1.2)